<resources>
    <string name="app_name">Sultan Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="customer_service">Customer Service</string>
    <string name="company_information">Company Information</string>
    <string name="forbit_limited">Forbit Limited</string>
    <string name="mirpur_1_dhaka_1216_bangladesh">Mirpur-1, Dhaka-1216, Bangladesh</string>
    <string name="forbit_bd_gmail_com">forbit.bd@gmail.com</string>
    <string name="payment_guide_title">You can make payments from your bKash account to our bKash Merchant account</string>
    <string name="language_settings">Language Settings</string>
    <string name="setting_app_language">Setting App Language</string>
    <string name="bangla">Bangla</string>
    <string name="english">English</string>
    <string name="account_amp_vehicle_information">Account And Vehicle Information</string>
    <string name="logout">Logout</string>
    <string name="company_info">Company Information</string>
    <string name="expenses">Expenses</string>
    <string name="language">Language</string>
    <string name="payment_guide">Payment Guide</string>
    <string name="alert_setting">Alert Settings</string>
    <string name="shared_vehicles">Shared Vehicles</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="alerts">Alerts</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_notification">No Notification</string>
    <string name="setting_vehicle_alerts">Setting Vehicle Alerts</string>
    <string name="ignition_alert">Ignition Alert</string>
    <string name="fuel_cut_alert">Fuel-Cut Alert</string>
    <string name="user_profile_settings">User Profile Settings</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="organization_name">Organization Name</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="setting_shared_vehicles">Setting Shared Vehicles</string>
    <string name="about_our_company_amp_service"><![CDATA[About Our Company & Service]]></string>
    <string name="check_for_update">Check For Update</string>
    <string name="no_alerts">No Alerts</string>
    <string name="virtual_control_platform">Virtual Control Platform</string>
    <string name="please_login_with_email_amp_password"><![CDATA[Please Login with Email & Password]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="power_on">POWER ON</string>
    <string name="power_off">POWER OFF</string>
    <string name="power_on_sms">POWER ON SMS</string>
    <string name="power_off_sms">POWER OFF SMS</string>
    <string name="get_location_sms">GET LOCATION SMS</string>
    <string name="vibration_alarm_on">VIBRATION ALARM ON</string>
    <string name="vibration_alarm_off">VIBRATION ALARM OFF</string>
    <string name="set_time_zone">SET TIME ZONE</string>
    <string name="restrict_boundary">RESTRICT BOUNDARY</string>
    <string name="boundaries">BOUNDARIES</string>
    <string name="create_route">CREATE ROUTE</string>
    <string name="location_rationale">Please Provide Location Permission</string>

    <string-array name="title_list">
        <item>Step 1</item>
        <item>Step 2</item>
        <item>Step 3</item>
        <item>Step 4</item>
        <item>Step 5</item>
        <item>Step 6</item>
        <item>Step 7</item>
        <item>Done !</item>
    </string-array>

    <string-array name="content_list">
        <item>Go to your bKash Mobile Menu by Dialing <b>*247#</b></item>
        <item>Choose <b>Send Money</b></item>
        <item>Enter <b>01313343311</b> Number</item>
        <item>Enter the <b>amount</b> you want to pay</item>
        <item>Enter a reference against your payment <b>(Your Car Registration Number)</b> </item>
        <item>Enter <b>1</b> as Counter Number</item>
        <item>Now Enter your bKash Mobile Menu <b>PIN</b> to confirm</item>
        <item>You will receive a confirmation message from <b>us and bKash</b></item>
    </string-array>

</resources>