<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/list_view"
        android:icon="@drawable/ic_baseline_home_24"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/viewall"
        android:title="@string/map_view"
        android:icon="@drawable/ic_baseline_map_24"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/alert"
        android:title="@string/alerts"
        android:icon="@drawable/ic_baseline_bus_alert_24"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>