<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".ui.settings.alertsetting.AlertSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_setting"
                android:textColor="@color/black"
                android:textSize="@dimen/largeText"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_vehicle_alerts"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/normalText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/medium_padding"
        app:cardElevation="2dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:src="@drawable/ignition"
                    android:layout_margin="@dimen/standard_padding"/>

                <Switch
                    android:id="@+id/english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ignition_alert"
                    android:textSize="@dimen/normalText"
                    android:layout_margin="@dimen/standard_padding"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/fuel"
                    android:padding="8dp"
                    android:layout_margin="@dimen/standard_padding"/>

                <Switch
                    android:id="@+id/fuelcut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel_cut_alert"
                    android:textSize="@dimen/normalText"
                    android:layout_margin="@dimen/standard_padding"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>